# valdi-xplatform-ui

./: .gitignore  ANDROID.md  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  tsconfig.json
valdi-ai-ui/: .bazelrc  .env.example  .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  ARCHITECTURE.md  BUILD.bazel  BUILD_IOS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Context.md  DEPLOYMENT.md  FINAL_SESSION_SUMMARY.md  FIX_SUMMARY.md  IOS_BUILD_PLAN.md  IOS_BUILD_PROGRESS_REPORT.md  IOS_BUILD_READINESS_REPORT.md  IOS_CHECKLIST.md  IOS_TEST_PLAN.md  MIGRATION_STATUS_REPORT.md  MODULE.bazel  PRE_COMMIT_SETUP.md  PROGRESS.md  PROJECT_HEALTH_REPORT.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  RELEASE_CHECKLIST.md  RESOURCES.md  SECURITY.md  SELF_CONTAINED_SETUP.md  STABILIZATION_STATUS.md  TASK_ROADMAP.md  TODO.md  TRANSFORMATION_SUMMARY.md  TROUBLESHOOTING.md  ULTRA_COMPLETION_SUMMARY.md  (+9 more)
valdi-ai-ui/.claude/: DEPENDENCIES.md  README.md  hooks.json  mcp_servers.json  settings.json  settings.local.json  statusline.sh
valdi-ai-ui/.claude/commands/: README.md  android.md  api-patterns.md  build-config.md  build.md  clean.md  code-quality.md  code-review.md  commit-msg.md  component-gen.md  debug.md  deploy-check.md  es2015-guide.md  fix-types.md  fresh-seed.md  ios.md  lint-prevention.md  lint.md  migration-builder.md  module-test.md  no-emoji-policy.md  nova-resource.md  path-conventions.md  performance-test.md  qcommit.md  qdb.md  qdocs.md  qfix.md  qnova.md  qplan.md  qrefactor.md  qreview.md  qsearch.md  qtest.md  quick-fix.md  refactor-plan.md  refactor.md  release-prep.md  review-staged.md  search-pattern.md  (+15 more)
valdi-ai-ui/.claude/prompts/: gcp-deployment-specialist.md
valdi-ai-ui/.github/: CICD_IMPLEMENTATION.md  INDEX.md  QUICK_START.md  WORKFLOW_BADGES.md
valdi-ai-ui/.github/workflows/: README.md  build.yml  ci.yml  release.yml
valdi-ai-ui/.husky/: QUICK_START.md  README.md  pre-commit
valdi-ai-ui/.husky/_/: husky.sh
valdi-ai-ui/Context/Features/001-ImplementedFeaturesSpec/: Spec.md
valdi-ai-ui/__mocks__/valdi_core/src/: Component.ts  Style.ts  SystemFont.ts
valdi-ai-ui/__mocks__/valdi_http/src/: HTTPClient.ts
valdi-ai-ui/__mocks__/valdi_navigation/src/: NavigationController.ts
valdi-ai-ui/__mocks__/valdi_tsx/src/: NativeTemplateElements.ts
valdi-ai-ui/docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_ANDROID.md  BUILD_FIXES_SESSION_2.md  BUILD_ISSUES_RESOLVED.md  BUILD_TROUBLESHOOTING.md  CLAUDE.md  CUSTOM_PROVIDERS.md  FINAL_PROGRESS_SUMMARY.md  HOOKS_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  IOS_TROUBLESHOOTING.md  PROJECT_COMPLETION_REPORT.md  PROJECT_PLAN.md  QUICK_SETUP_CUSTOM_PROVIDERS.md  SELF_CONTAINED_SETUP.md  SESSION_SUMMARY.md  STANDALONE_BUILD.md  TESTING.md  TEST_COVERAGE_REPORT.md  TYPESCRIPT_STANDARDS.md  ULTRATHINK_SESSION_COMPLETE.md  VALDI_IMPORT_CONVENTIONS.md  VALDI_PATTERNS.md
valdi-ai-ui/examples/tools/: custom-tool.ts
valdi-ai-ui/examples/workflows/: iterative-refinement.ts  parallel-analysis.ts  routing-specialist.ts  sequential-research.ts
valdi-ai-ui/modules/: valdi.d.ts
valdi-ai-ui/modules/agent_manager/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/agent_manager/src/: AgentExecutor.ts  AgentRegistry.ts  LoopController.ts  WorkflowEngine.ts  index.ts  types.ts
valdi-ai-ui/modules/chat_core/: BUILD.bazel  PERSISTENCE_EXAMPLES.ts  PERSISTENCE_IMPLEMENTATION.md  PERSISTENCE_QUICK_START.md  module.yaml
valdi-ai-ui/modules/chat_core/src/: AgentWorkflow.ts  ChatService.ts  ConversationPersistence.ts  ConversationStore.ts  EvaluatorOptimizerWorkflow.ts  ExportService.ts  MessagePersistence.ts  MessageStore.ts  ParallelWorkflow.ts  RoutingWorkflow.ts  SequentialWorkflow.ts  StorageProvider.ts  StreamHandler.ts  TOOL_USAGE_EXAMPLES.md  ToolDefinitions.test.example.ts  ToolDefinitions.ts  ToolExecutor.ts  WORKFLOW_IMPLEMENTATION_SUMMARY.md  index.ts  types.ts
valdi-ai-ui/modules/chat_ui/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/chat_ui/src/: ChatIntegrationService.ts  ChatView.tsx  ChatViewStreaming.tsx  ConversationList.tsx  ConversationListConnected.tsx  ConversationListItem.tsx  InputBar.tsx  MessageBubble.tsx  index.ts
valdi-ai-ui/modules/common/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/common/src/: index.ts
valdi-ai-ui/modules/conversation_manager/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/main_app/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/model_config/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/settings/: BUILD.bazel  IMPLEMENTATION_SUMMARY.md  README.md  USAGE_EXAMPLES.md  module.yaml
valdi-ai-ui/modules/tools_demo/: BUILD.bazel  module.yaml
valdi-ai-ui/modules/workflow_demo/: BUILD.bazel  module.yaml
valdi-ai-ui/scripts/: build-modules-sequential.sh  dev-setup.sh  fix-style-types.sh  fix-types-bulk.sh  fix-valdi-imports.sh  ios-build-pipeline.sh  release.sh  test-lm-studio.sh  utils.sh  validate-all.sh  validate-app-build.sh  validate-module-deps.sh  validate-self-containment.sh  verify-valdi-imports.sh
valdi-kitchen-sink/: .eslintrc.js  BUILD.bazel  IMPLEMENTATION_PLAN.md  MODULE.bazel  PROJECT_SUMMARY.md  README.md  package.json  tsconfig.json
valdi-kitchen-sink/app_assets/: config.json
valdi-kitchen-sink/modules/animation_demo/: BUILD.bazel
valdi-kitchen-sink/modules/common/: BUILD.bazel
valdi-kitchen-sink/modules/forms_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/gestures_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/images_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/layouts_demo/: BUILD.bazel
valdi-kitchen-sink/modules/lists_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/scrolling_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/shapes_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/state_demo/: BUILD.bazel
valdi-kitchen-sink/modules/styling_demo/: BUILD.bazel  package.json
valdi-kitchen-sink/modules/text_demo/: BUILD.bazel
(+146 files in other folders)
