load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")

valdi_application(
    name = "valdi_ai_ui",
    android_activity_theme_name = "Theme.ValdiAIUI.Launch",
    android_app_icon_name = "app_icon",
    ios_bundle_id = "com.valdi.aiui",
    ios_families = ["iphone", "ipad"],
    root_component_path = "App@main_app/src/App",
    title = "Valdi AI UI",
    version = "1.0.0",
    deps = [
        "//apps/valdi_ai_ui/modules/main_app",
        "//apps/valdi_ai_ui/modules/common",
        "//apps/valdi_ai_ui/modules/chat_core",
        "//apps/valdi_ai_ui/modules/chat_ui",
        "//apps/valdi_ai_ui/modules/tools_demo",
        "//apps/valdi_ai_ui/modules/workflow_demo",
        "//apps/valdi_ai_ui/modules/settings",
    ],
)
