load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")

valdi_application(
    name = "valdi_ai_ui",
    android_activity_theme_name = "Theme.ValdiAIUI.Launch",
    android_app_icon_name = "app_icon",
    ios_bundle_id = "com.valdi.aiui",
    ios_families = ["iphone", "ipad"],
    root_component_path = "App@main_app/src/App",
    title = "Valdi AI UI",
    version = "1.0.0",
    deps = [
        # Paths relative to valdi-ai-ui workspace root
        # For standalone builds, use //modules/...
        # For parent workspace builds, use //apps/valdi_ai_ui/modules/...
        "//modules/main_app",
        "//modules/common",
        "//modules/chat_core",
        "//modules/chat_ui",
        "//modules/tools_demo",
        "//modules/workflow_demo",
        "//modules/settings",
    ],
)
