load("@valdi//bzl/valdi:valdi_application.bzl", "valdi_application")

valdi_application(
    name = "kitchen_sink",
    android_activity_theme_name = "Theme.ValdiKitchenSink.Launch",
    android_app_icon_name = "app_icon",
    ios_bundle_id = "com.valdi.kitchensink",
    ios_families = ["iphone"],
    root_component_path = "App@main_app/src/App",
    title = "Valdi Kitchen Sink",
    version = "1.0.0",
    deps = [
        "//modules/main_app",
        "//modules/common",
        "//modules/layouts_demo",
        "//modules/text_demo",
        "//modules/images_demo",
        "//modules/scrolling_demo",
        "//modules/gestures_demo",
        "//modules/styling_demo",
        "//modules/state_demo",
        "//modules/animation_demo",
        "//modules/shapes_demo",
        "//modules/forms_demo",
        "//modules/lists_demo",
    ],
)
