load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "chat_core",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "//apps/valdi_ai_ui/modules/common",
        # Note: AI SDK dependencies are installed via npm
        # and will be available at runtime
    ],
)
