load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "main_app",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_tsx",
        "@valdi//src/valdi_modules/src/valdi/valdi_navigation",
        "//apps/valdi_ai_ui/modules/common",
        "//apps/valdi_ai_ui/modules/chat_core",
        "//apps/valdi_ai_ui/modules/chat_ui",
        "//apps/valdi_ai_ui/modules/settings",
        "//apps/valdi_ai_ui/modules/tools_demo",
        "//apps/valdi_ai_ui/modules/workflow_demo",
    ],
)
