load("@valdi//bzl/valdi:valdi_module.bzl", "valdi_module")

valdi_module(
    name = "main_app",
    srcs = glob([
        "src/**/*.ts",
        "src/**/*.tsx",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "@valdi//src/valdi_modules/src/valdi/valdi_core",
        "@valdi//src/valdi_modules/src/valdi/valdi_tsx",
        "@valdi//src/valdi_modules/src/valdi/valdi_navigation",
        "@valdi//src/valdi_modules/src/valdi/foundation",
        # Valdi Widgets for UI components (excluding navigation due to header dependency issues)
        "@valdi_widgets//valdi_modules/widgets",
        "//modules/common",
        "//modules/chat_core",
        "//modules/chat_ui",
        "//modules/conversation_manager",
        "//modules/model_config",
        "//modules/settings",
        "//modules/tools_demo",
        "//modules/workflow_demo",
    ],
)
